# WaterSalute

./: .gitignore  CMakeLists.txt  README.md  README.txt
.github/: FUNDING.yml
.github/workflows/: build.yml
SDK/CHeaders/XPLM/: XPLM.h  XPLMDataAccess.h  XPLMDefs.h  XPLMGraphics.h  XPLMInstance.h  XPLMMenus.h  XPLMPlugin.h  XPLMProcessing.h  XPLMScenery.h  XPLMUtilities.h
resources/: firetruck.mtl  waterjet.pss
src/: Common.cpp  Common.h  FireTruck.cpp  FireTruck.h  PathPlanning.cpp  PathPlanning.h  RoadNetwork.cpp  RoadNetwork.h  WaterSalute.cpp  WaterSalute.def  XPLMStubs.cpp
